crates/schematic/tests/snapshots/partialize_test__enum_internal.snap
---
source: crates/schematic/tests/partialize_test.rs
expression: "create_diff::<InternalTagged>()"
---
⬛️Schema {
⬛️    deprecated: None,
⬛️    description: None,
⬛️    name: Some(
🟥        "InternalTagged",
🟩        "PartialInternalTagged",
⬛️    ),
⬛️    nullable: false,
⬛️    ty: Union(
⬛️        UnionType {
⬛️            default_index: None,
⬛️            partial: false,
⬛️            operator: AnyOf,
⬛️            variants_types: [
⬛️                Schema {
⬛️                    deprecated: None,
⬛️                    description: None,
⬛️                    name: None,
⬛️                    nullable: false,
⬛️                    ty: Struct(
⬛️                        StructType {
⬛️                            fields: {
⬛️                                "type": SchemaField {
⬛️                                    aliases: [],
⬛️                                    comment: None,
⬛️                                    schema: Schema {
⬛️                                        deprecated: None,
⬛️                                        description: None,
⬛️                                        name: None,
⬛️                                        nullable: false,
⬛️                                        ty: Literal(
⬛️                                            LiteralType {
⬛️                                                value: String(
⬛️                                                    "Foo",
⬛️                                                ),
⬛️                                            },
⬛️                                        ),
⬛️                                    },
⬛️                                    deprecated: None,
⬛️                                    env_var: None,
⬛️                                    flatten: false,
⬛️                                    hidden: false,
⬛️                                    nullable: false,
⬛️                                    optional: false,
⬛️                                    read_only: false,
⬛️                                    write_only: false,
⬛️                                },
⬛️                            },
⬛️                            partial: false,
⬛️                            required: None,
⬛️                        },
⬛️                    ),
⬛️                },
⬛️                Schema {
⬛️                    deprecated: None,
⬛️                    description: None,
⬛️                    name: None,
⬛️                    nullable: false,
⬛️                    ty: Boolean(
⬛️                        BooleanType {
⬛️                            default: None,
⬛️                        },
⬛️                    ),
⬛️                },
⬛️                Schema {
⬛️                    deprecated: None,
⬛️                    description: None,
⬛️                    name: None,
⬛️                    nullable: false,
⬛️                    ty: Integer(
⬛️                        IntegerType {
⬛️                            default: None,
⬛️                            enum_values: None,
⬛️                            format: None,
⬛️                            kind: Usize,
⬛️                            max: None,
⬛️                            max_exclusive: None,
⬛️                            min: None,
⬛️                            min_exclusive: None,
⬛️                            multiple_of: None,
⬛️                        },
⬛️                    ),
⬛️                },
⬛️                Schema {
⬛️                    deprecated: None,
⬛️                    description: None,
⬛️                    name: Some(
🟥                        "Basic",
🟩                        "PartialBasic",
⬛️                    ),
⬛️                    nullable: false,
⬛️                    ty: Struct(
⬛️                        StructType {
⬛️                            fields: {
⬛️                                "field": SchemaField {
⬛️                                    aliases: [],
⬛️                                    comment: None,
⬛️                                    schema: Schema {
⬛️                                        deprecated: None,
⬛️                                        description: None,
⬛️                                        name: None,
🟥                                        nullable: false,
🟥                                        ty: String(
🟥                                            StringType {
🟥                                                default: None,
🟥                                                enum_values: None,
🟥                                                format: None,
🟥                                                max_length: None,
🟥                                                min_length: None,
🟥                                                pattern: None,
🟩                                        nullable: true,
🟩                                        ty: Union(
🟩                                            UnionType {
🟩                                                default_index: None,
🟩                                                partial: false,
🟩                                                operator: AnyOf,
🟩                                                variants_types: [
🟩                                                    Schema {
🟩                                                        deprecated: None,
🟩                                                        description: None,
🟩                                                        name: None,
🟩                                                        nullable: false,
🟩                                                        ty: String(
🟩                                                            StringType {
🟩                                                                default: None,
🟩                                                                enum_values: None,
🟩                                                                format: None,
🟩                                                                max_length: None,
🟩                                                                min_length: None,
🟩                                                                pattern: None,
🟩                                                            },
🟩                                                        ),
🟩                                                    },
🟩                                                    Schema {
🟩                                                        deprecated: None,
🟩                                                        description: None,
🟩                                                        name: None,
🟩                                                        nullable: false,
🟩                                                        ty: Null,
🟩                                                    },
🟩                                                ],
⬛️                                            },
⬛️                                        ),
⬛️                                    },
⬛️                                    deprecated: None,
⬛️                                    env_var: None,
⬛️                                    flatten: false,
⬛️                                    hidden: false,
🟥                                    nullable: false,
🟥                                    optional: false,
🟩                                    nullable: true,
🟩                                    optional: true,
⬛️                                    read_only: false,
⬛️                                    write_only: false,
⬛️                                },
⬛️                                "type": SchemaField {
⬛️                                    aliases: [],
⬛️                                    comment: None,
⬛️                                    schema: Schema {
⬛️                                        deprecated: None,
⬛️                                        description: None,
⬛️                                        name: None,
🟥                                        nullable: false,
🟥                                        ty: Literal(
🟥                                            LiteralType {
🟥                                                value: String(
🟥                                                    "Qux",
🟥                                                ),
🟩                                        nullable: true,
🟩                                        ty: Union(
🟩                                            UnionType {
🟩                                                default_index: None,
🟩                                                partial: false,
🟩                                                operator: AnyOf,
🟩                                                variants_types: [
🟩                                                    Schema {
🟩                                                        deprecated: None,
🟩                                                        description: None,
🟩                                                        name: None,
🟩                                                        nullable: false,
🟩                                                        ty: Literal(
🟩                                                            LiteralType {
🟩                                                                value: String(
🟩                                                                    "Qux",
🟩                                                                ),
🟩                                                            },
🟩                                                        ),
🟩                                                    },
🟩                                                    Schema {
🟩                                                        deprecated: None,
🟩                                                        description: None,
🟩                                                        name: None,
🟩                                                        nullable: false,
🟩                                                        ty: Null,
🟩                                                    },
🟩                                                ],
⬛️                                            },
⬛️                                        ),
⬛️                                    },
⬛️                                    deprecated: None,
⬛️                                    env_var: None,
⬛️                                    flatten: false,
⬛️                                    hidden: false,
🟥                                    nullable: false,
🟥                                    optional: false,
🟩                                    nullable: true,
🟩                                    optional: true,
⬛️                                    read_only: false,
⬛️                                    write_only: false,
⬛️                                },
⬛️                            },
⬛️                            partial: true,
⬛️                            required: None,
⬛️                        },
⬛️                    ),
⬛️                },
⬛️            ],
⬛️        },
⬛️    ),
⬛️}
