crates/schematic/tests/snapshots/partialize_test__nested.snap
---
source: crates/schematic/tests/partialize_test.rs
expression: "create_diff::<Nested>()"
---
⬛️Schema {
⬛️    deprecated: None,
⬛️    description: None,
⬛️    name: Some(
🟥        "Nested",
🟩        "PartialNested",
⬛️    ),
⬛️    nullable: false,
⬛️    ty: Struct(
⬛️        StructType {
⬛️            fields: {
⬛️                "field": SchemaField {
⬛️                    aliases: [],
⬛️                    comment: None,
⬛️                    schema: Schema {
⬛️                        deprecated: None,
⬛️                        description: None,
🟥                        name: Some(
🟥                            "Basic",
🟥                        ),
🟥                        nullable: false,
🟥                        ty: Struct(
🟥                            StructType {
🟥                                fields: {
🟥                                    "field": SchemaField {
🟥                                        aliases: [],
🟥                                        comment: None,
🟥                                        schema: Schema {
🟥                                            deprecated: None,
🟥                                            description: None,
🟥                                            name: None,
🟥                                            nullable: false,
🟥                                            ty: String(
🟥                                                StringType {
🟥                                                    default: None,
🟥                                                    enum_values: None,
🟥                                                    format: None,
🟥                                                    max_length: None,
🟥                                                    min_length: None,
🟥                                                    pattern: None,
🟩                        name: None,
🟩                        nullable: true,
🟩                        ty: Union(
🟩                            UnionType {
🟩                                default_index: None,
🟩                                partial: false,
🟩                                operator: AnyOf,
🟩                                variants_types: [
🟩                                    Schema {
🟩                                        deprecated: None,
🟩                                        description: None,
🟩                                        name: Some(
🟩                                            "PartialBasic",
🟩                                        ),
🟩                                        nullable: false,
🟩                                        ty: Struct(
🟩                                            StructType {
🟩                                                fields: {
🟩                                                    "field": SchemaField {
🟩                                                        aliases: [],
🟩                                                        comment: None,
🟩                                                        schema: Schema {
🟩                                                            deprecated: None,
🟩                                                            description: None,
🟩                                                            name: None,
🟩                                                            nullable: true,
🟩                                                            ty: Union(
🟩                                                                UnionType {
🟩                                                                    default_index: None,
🟩                                                                    partial: false,
🟩                                                                    operator: AnyOf,
🟩                                                                    variants_types: [
🟩                                                                        Schema {
🟩                                                                            deprecated: None,
🟩                                                                            description: None,
🟩                                                                            name: None,
🟩                                                                            nullable: false,
🟩                                                                            ty: String(
🟩                                                                                StringType {
🟩                                                                                    default: None,
🟩                                                                                    enum_values: None,
🟩                                                                                    format: None,
🟩                                                                                    max_length: None,
🟩                                                                                    min_length: None,
🟩                                                                                    pattern: None,
🟩                                                                                },
🟩                                                                            ),
🟩                                                                        },
🟩                                                                        Schema {
🟩                                                                            deprecated: None,
🟩                                                                            description: None,
🟩                                                                            name: None,
🟩                                                                            nullable: false,
🟩                                                                            ty: Null,
🟩                                                                        },
🟩                                                                    ],
🟩                                                                },
🟩                                                            ),
🟩                                                        },
🟩                                                        deprecated: None,
🟩                                                        env_var: None,
🟩                                                        flatten: false,
🟩                                                        hidden: false,
🟩                                                        nullable: true,
🟩                                                        optional: true,
🟩                                                        read_only: false,
🟩                                                        write_only: false,
🟩                                                    },
⬛️                                                },
🟥                                            ),
🟥                                        },
🟩                                                partial: true,
🟩                                                required: None,
🟩                                            },
🟩                                        ),
🟩                                    },
🟩                                    Schema {
⬛️                                        deprecated: None,
🟥                                        env_var: None,
🟥                                        flatten: false,
🟥                                        hidden: false,
🟩                                        description: None,
🟩                                        name: None,
⬛️                                        nullable: false,
🟥                                        optional: false,
🟥                                        read_only: false,
🟥                                        write_only: false,
🟩                                        ty: Null,
⬛️                                    },
🟥                                },
🟥                                partial: true,
🟥                                required: None,
🟩                                ],
⬛️                            },
⬛️                        ),
⬛️                    },
⬛️                    deprecated: None,
⬛️                    env_var: None,
⬛️                    flatten: false,
⬛️                    hidden: false,
🟥                    nullable: false,
🟥                    optional: false,
🟩                    nullable: true,
🟩                    optional: true,
⬛️                    read_only: false,
⬛️                    write_only: false,
⬛️                },
⬛️                "fieldOpt": SchemaField {
⬛️                    aliases: [],
⬛️                    comment: None,
⬛️                    schema: Schema {
⬛️                        deprecated: None,
⬛️                        description: None,
⬛️                        name: None,
⬛️                        nullable: true,
⬛️                        ty: Union(
⬛️                            UnionType {
⬛️                                default_index: None,
⬛️                                partial: true,
⬛️                                operator: AnyOf,
⬛️                                variants_types: [
⬛️                                    Schema {
⬛️                                        deprecated: None,
⬛️                                        description: None,
⬛️                                        name: Some(
🟥                                            "Basic",
🟩                                            "PartialBasic",
⬛️                                        ),
⬛️                                        nullable: false,
⬛️                                        ty: Struct(
⬛️                                            StructType {
⬛️                                                fields: {
⬛️                                                    "field": SchemaField {
⬛️                                                        aliases: [],
⬛️                                                        comment: None,
⬛️                                                        schema: Schema {
⬛️                                                            deprecated: None,
⬛️                                                            description: None,
⬛️                                                            name: None,
🟥                                                            nullable: false,
🟥                                                            ty: String(
🟥                                                                StringType {
🟥                                                                    default: None,
🟥                                                                    enum_values: None,
🟥                                                                    format: None,
🟥                                                                    max_length: None,
🟥                                                                    min_length: None,
🟥                                                                    pattern: None,
🟩                                                            nullable: true,
🟩                                                            ty: Union(
🟩                                                                UnionType {
🟩                                                                    default_index: None,
🟩                                                                    partial: false,
🟩                                                                    operator: AnyOf,
🟩                                                                    variants_types: [
🟩                                                                        Schema {
🟩                                                                            deprecated: None,
🟩                                                                            description: None,
🟩                                                                            name: None,
🟩                                                                            nullable: false,
🟩                                                                            ty: String(
🟩                                                                                StringType {
🟩                                                                                    default: None,
🟩                                                                                    enum_values: None,
🟩                                                                                    format: None,
🟩                                                                                    max_length: None,
🟩                                                                                    min_length: None,
🟩                                                                                    pattern: None,
🟩                                                                                },
🟩                                                                            ),
🟩                                                                        },
🟩                                                                        Schema {
🟩                                                                            deprecated: None,
🟩                                                                            description: None,
🟩                                                                            name: None,
🟩                                                                            nullable: false,
🟩                                                                            ty: Null,
🟩                                                                        },
🟩                                                                    ],
⬛️                                                                },
⬛️                                                            ),
⬛️                                                        },
⬛️                                                        deprecated: None,
⬛️                                                        env_var: None,
⬛️                                                        flatten: false,
⬛️                                                        hidden: false,
🟥                                                        nullable: false,
🟥                                                        optional: false,
🟩                                                        nullable: true,
🟩                                                        optional: true,
⬛️                                                        read_only: false,
⬛️                                                        write_only: false,
⬛️                                                    },
⬛️                                                },
⬛️                                                partial: true,
⬛️                                                required: None,
⬛️                                            },
⬛️                                        ),
⬛️                                    },
⬛️                                    Schema {
⬛️                                        deprecated: None,
⬛️                                        description: None,
⬛️                                        name: None,
⬛️                                        nullable: false,
⬛️                                        ty: Null,
⬛️                                    },
⬛️                                ],
⬛️                            },
⬛️                        ),
⬛️                    },
⬛️                    deprecated: None,
⬛️                    env_var: None,
⬛️                    flatten: false,
⬛️                    hidden: false,
⬛️                    nullable: true,
🟥                    optional: false,
🟩                    optional: true,
⬛️                    read_only: false,
⬛️                    write_only: false,
⬛️                },
⬛️            },
⬛️            partial: false,
⬛️            required: None,
⬛️        },
⬛️    ),
⬛️}
